--- a/style/style.css
+++ b/style/style.css
@@ -67,18 +67,21 @@ body {
 #scroll-up-button {
     display: none;
     position: fixed;
-    bottom: 20px;
-    right: 20px;
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: #fff;
+    bottom: 30px;
+    right: 30px;
+    width: 50px;
+    height: 50px;
+    background-color: var(--dom1);
+    color: var(--main);
     border: none;
-    border-radius: 5px;
+    border-radius: 50%;
     cursor: pointer;
+    line-height: 50%;
+    transition: 0.15s ease-in-out;
 }
 
 #scroll-up-button:hover {
-    background-color: #0056b3;
+    background-color: var(--butHover);
 }
 
 /*hero Image*/
