--- a/style/style.css
+++ b/style/style.css
@@ -77,7 +77,7 @@ body {
     border-radius: 50%;
     cursor: pointer;
     line-height: 50%;
-    transition: 0.15s ease-in-out;
+    transition: 0.18s ease-in-out;
 }
 
 #scroll-up-button:hover {
@@ -207,15 +207,90 @@ body {
 /*menu*/
 .menu {
     background-color: var(--main);
+    padding-bottom: 5rem;
 }
 .menu h1 {
     color: var(--dom1);
     text-align: center;
     font-size: 2rem;
-    padding: 5rem 0rem;
+    padding: 2rem 0rem;
+}
+
+/*tab-menu*/
+.tab-Menu {
+    color: var(--main);
+
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 50rem;
+    margin: auto;
+    padding: 25px;
+}
+.tab-Menu input[type="radio"] {
+    display: none;
+}
+.tab-Menu label {
+    padding: 20px;
+    background: var(--putih);
+    font-weight: bold;
+}
+.tab-Menu .tab {
+    width: 100%;
+    padding: 5rem;
+    background: var(--dom1);
+    order: 1;
+    display: none;
+}
+.tab-Menu .tab h2 {
+    font-size: 2em;
+}
+.tab-Menu input[type="radio"]:checked + label + .tab {
+    display: block;
+}
+.tab-Menu input[type="radio"]:checked + label {
+    background: var(--dom1);
+}
+.tab-Menu label:hover{
+    background: var(--butHover);
+}
+.tab p {
+    text-align: justify;
 }
 
 
+/*kontak*/
+.kontak {
+    background-color: var(--putih);
+    display: grid;
+    padding: 5rem 0rem 5rem 0rem;
+}
+.kontak h1 {
+    color: var(--main);
+    text-align: center;
+    font-size: 2rem;
+    margin-bottom: 5rem;
+}
+.kontak .icon {
+    display: flex;
+    justify-content: center;
+}
+.kontak .icon img {
+    width: 5rem;
+    height: auto;
+    opacity: 80%;
+    transition: 0.25s ease-in-out;
+}
+.kontak .icon img:hover {
+    opacity: 100%;
+}
+
+    /*copyright*/
+.copyright {
+    background-color: var(--main);
+}
+.copyright h3 {
+    color: var(--dom1);
+}
 
 /*Media Queries*/
 @media (max-width: 500px) {
